force-app/main/default/objects/FT_Cart__c/FT_Cart__c.object-meta.xml
<CustomObject>
    <label>FT-Cart</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>FT-Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FT-Cart</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>