force-app/main/default/objects/FT_Cart__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FT-Cart</relationshipLabel>
    <relationshipName>FT_Cart</relationshipName>
    <type>Lookup</type>
</CustomField>