force-app/main/default/objects/FT_Cart__c/fields/Total_Cart_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Cart_Items__c</fullName>
    <label>Total Cart Items</label>
    <summaryForeignKey>FT_Cart_Items__c.FT_Cart__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>