force-app/main/default/objects/FT_Cart__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>FT_Cart_Items__c.Cart_Item_Price__c</summarizedField>
    <summaryForeignKey>FT_Cart_Items__c.FT_Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>